# fo-dicom.Codecs

./: .gitignore  LICENSE.txt  Program.cs  README.md  azure-pipelines.yml  cgmanifest.json  efferent-native.csproj  efferent-native.nuspec  fo-dicom.Codecs.4.sln  fo-dicom.Codecs.nuspec  fo-dicom.Codecs.sln  fo-dicom.Codecs.spdx.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: main.yml
Codec/: DicomHTJpeg2000Codec.cs  DicomHtJpeg2000Codec.cs  DicomJpeg2000Codec.cs  DicomJpegCodec.cs  DicomJpegHT2000Codec.cs  DicomJpegLsCodec.cs  DicomRleCodec.cs  NativeTranscoderManager.cs  Platform.cs
Native/: Dicom.Imaging.Codec.HtJpeg2000.cpp  Dicom.Imaging.Codec.Jpeg.cpp  Dicom.Imaging.Codec.Jpeg2000.cpp  Dicom.Imaging.Codec.Jpeg2000HT.cpp  Dicom.Imaging.Codec.JpegHT2000.cpp  Dicom.Imaging.Codec.JpegLS.cpp  Dicom.Imaging.Codec.Jpeg_12.cpp  Dicom.Imaging.Codec.Jpeg_16.cpp  Dicom.Imaging.Codec.Jpeg_8.cpp
Native/Common/OpenJPEG/: bench_dwt.c  dwt.c  ht_dec.c  j2k.c  j2k.h  jp2.c  openjpeg.h  openjpeg2to1wrapper.h  opj_common.h  opj_config.h  opj_config_private.h  t1.c  t2.c  t2.h  tcd.c  tcd.h
Native/Common/libijg12/: jcapistd.c  jccoefct.c  jcdiffct.c  jcpred.c  jcprepct.c  jdcoefct.c  jdmaster.c  jdphuff.c  jdpred.c  jdshuff.c  jerror.c  jinclude12.h  jmemmgr.c  jpeglib12.h  jquant2.c
Native/Common/libijg16/: jcapistd.c  jccoefct.c  jcmaster.c  jcprepct.c  jdcoefct.c  jdhuff.c  jdinput.c  jdlhuff.c  jdmainct.c  jdphuff.c  jdpred.c  jdscale.c  jdshuff.c  jerror.c  jerror16.h  jinclude16.h  jmemmgr.c  jpeglib16.h  jquant1.c
Native/Common/libijg8/: jcdiffct.c  jdcoefct.c  jdmainct.c  jdphuff.c  jdpred.c  jdscale.c  jinclude8.h  jmemmgr.c  jmemnobs.c  jpeglib8.h  jquant1.c
Native/Common/libjpeg-turbo/: jconfig.h  jconfigint.h
Native/Linux64/build_ALL/: CMakeLists.txt
Native/Linux64/libijg12/: jccoefct.c  jcdiffct.c  jchuff.c  jclhuff.c  jcmainct.c  jcmaster.c  jcparam.c  jcphuff.c  jcpred.c  jcprepct.c  jcsample.c  jctrans.c  jdapistd.c  jdcoefct.c  jddiffct.c  jdhuff.c  jdinput.c  jdlhuff.c  jdmarker.c  jdmerge.c  jdphuff.c  jdpred.c  jdsample.c  jdshuff.c  jmemmgr.c  jquant1.c  jquant2.c
Native/Linux64/libijg16/: jccoefct.c  jcdiffct.c  jchuff.c  jclhuff.c  jcmainct.c  jcmaster.c  jcphuff.c  jcpred.c  jcsample.c  jctrans.c  jdcoefct.c  jddiffct.c  jdinput.c  jdlhuff.c  jdmerge.c  jdphuff.c  jdpostct.c  jdshuff.c
Native/Linux64/libijg8/: jcapistd.c  jccoefct.c  jcdiffct.c  jclhuff.c  jcmainct.c  jcmaster.c  jcparam.c  jcprepct.c  jdcoefct.c  jdinput.c  jdlhuff.c  jdmerge.c  jdphuff.c  jdpostct.c  jdpred.c  jdsample.c  jdshuff.c  jmemmgr.c  jquant1.c
Native/MacOS/OpenJPEG/: int.h
Native/MacOS/build_ALL/: CMakeLists.txt
Native/MacOS/libijg12/: jcapistd.c  jccoefct.c  jcdiffct.c  jcmaster.c  jcprepct.c  jctrans.c  jdapistd.c  jdcoefct.c  jddiffct.c  jdhuff.c  jdinput.c  jdlhuff.c  jdmainct.c  jdmarker.c  jdphuff.c  jdpostct.c  jdshuff.c  jmemmgr.c  jmorecfg12.h
Native/MacOS/libijg16/: jccoefct.c  jconfig16.h  jcparam.c  jcprepct.c  jdapistd.c  jdcoefct.c  jdhuff.c  jdlhuff.c  jdmainct.c  jdmarker.c  jdphuff.c  jdsample.c  jdshuff.c  jmemmgr.c  jquant1.c  jquant2.c
Native/MacOS/libijg8/: jccoefct.c  jcdiffct.c  jconfig8.h  jcphuff.c  jcpred.c  jcprepct.c  jcsample.c  jctrans.c  jdapistd.c  jdcoefct.c  jddiffct.c  jdhuff.c  jdinput.c  jdlhuff.c  jdmainct.c  jdmarker.c  jdphuff.c  jerror.c  jmemmgr.c  jpeglib8.h  jquant2.c
Native/POSIX64/: CMakeLists.txt
Native/POSIX64/build_ALL/: CMakeLists.Linux.txt
Native/POSIX64/build_linux/: CMakeLists.txt
Native/POSIX64/build_macOS/: CMakeLists.txt
Native/POSIX64/build_osx/: CMakeLists.txt
Native/POSIX64/libijg12/: jchuff.c  jcmaster.c  jconfig12.h  jdhuff.c  jpeglib12.h  jquant1.c  jquant2.c  osconfig.h
Native/POSIX64/libijg16/: jchuff.c  jconfig16.h  jcpred.c  jdhuff.c  jdshuff.c  jmorecfg16.h  jquant2.c
Native/POSIX64/libijg8/: jccoefct.c  jchuff.c  jconfig8.h  jcpred.c  jmorecfg8.h  jquant2.c
Native/Windows64/build_ALL/: Dicom.Native-win-x64.vcxproj  Dicom.Native-win-x64.vcxproj.filters  Dicom.Native-win64.vcxproj  Dicom.Native-win64.vcxproj.filters  Dicom.Native.filters  Dicom.Native.vcxproj  Make.vcxproj  Make.vcxproj.filters  libijg12.x64.vcxproj  libijg16.x64.vcxproj  libijg16.x64.vcxproj.filters  libijg8.x64.vcxproj
Native/Windows64/build_ARM64/: Dicom.Native.filters  Dicom.Native.vcxproj  libijg8.arm64.vcxproj  (+3 more)
Platform/fo-dicom/: fo-dicom.Codecs.PublicKey  fo-dicom.Codecs.PublicKeyToken  fo-dicom.Codecs.csproj
Platform/fo-dicom.4/: fo-dicom.Codecs.4.csproj
Setup/: fo-dicom.Codecs.nuspec
Setup/Targets/: fo-dicom.Codecs.targets
Tests/Acceptance/: AcceptanceTests.4.csproj  AcceptanceTests.cs  AcceptanceTests.csproj  PM5644-960x540_RLE-Lossless.dcm  Program.cs
Tests/Unit/: CanTranscodeUnitTest.cs  Program.cs  RLEissue.cs  TranscodeUnitTest.cs  UnitTests.4.csproj  UnitTests.csproj  test16bits.dcm
js/wasm/: CMakeLists.txt  README.md  build.sh  example.html
js/wasm/docker/build_system/: Dockerfile  test_prog.cpp
js/wasm/src/: decoder.cpp
src/: efferent-native.csproj  fo-dicom.Codecs.csproj
src/Codec/: DicomJpeg2000Codec.cs  DicomJpegCodec.cs  DicomJpegLsCodec.cs  DicomRleCodec.cs  NativeTranscoderManager.cs
src/Native/: Dicom.Imaging.Codec.Jpeg2000.cpp  Dicom.Imaging.Codec.JpegLS.cpp  Dicom.Imaging.Codec.Jpeg_12.cpp  Dicom.Imaging.Codec.Jpeg_16.cpp  Dicom.Imaging.Codec.Jpeg_8.cpp
src/Native/Linux64/build_ALL/: CMakeLists.txt
test/: CanTranscodeUnitTest.cs  JPEG2000.dcm  Program.cs  Tests.csproj  TranscodeUnitTest.cs  UnitTest1.cs  test8bits.dcm
test1/: AcceptanceTests.cs  PM5644-960x540_JPEG-Baseline_YBR422.dcm  PM5644-960x540_JPEG-Baseline_YBRFull.dcm  PM5644-960x540_JPEG-LS_Lossless.dcm  PM5644-960x540_JPEG-LS_NearLossless.dcm  PM5644-960x540_JPEG-Lossless_RGB.dcm  PM5644-960x540_JPEG2000-Lossless.dcm  PM5644-960x540_JPEG2000-Lossy.dcm  PM5644-960x540_JPEG2000-Lossy50.dcm  PM5644-960x540_Palette_16.dcm  PM5644-960x540_Palette_8.dcm  PM5644-960x540_RGB.dcm  PM5644-960x540_RLE-Lossless.dcm  Program.cs  Tests.csproj  TranscodeUnitTest.cs
(+127 files in other folders)
